--- a/src/app/menu/allprod/allprod.component.html
+++ b/src/app/menu/allprod/allprod.component.html
@@ -4,7 +4,6 @@
     User ID -{{ item.userId}}
     <br>
     ID - {{ item.id}}
-    <button type="button" [routerLink]="['../detail',
-    item.id,item.title,item.userId,item.body]">Detail!</button>
+    <button type="button" [routerLink]="['../detail',item.id]">Detail!</button>
   </div>
 </div>
