--- a/src/app/menu/detail/detail.component.html
+++ b/src/app/menu/detail/detail.component.html
@@ -1,4 +1,6 @@
-<p>detail works!</p>
-<div class="" *ngFor="let item of data">
-  {{item}}
-</div>
+<button type="button" [routerLink]="['../../']">Go back!</button>
+
+<p>{{data.id}} - Id</p>
+<p>{{data.userId}} - User Id</p>
+<p>{{data.title}} - title</p>
+<p>{{data.body}} - body</p>
