--- a/src/app/menu/shop/shop.component.html
+++ b/src/app/menu/shop/shop.component.html
@@ -1,7 +1,31 @@
 <p>shop works!</p>
-<div class="sideMenu">
-  <input type="text" name="" value="" placeholder="Ender Id" (keyup)="filtId($event)">
+<div class="search">
+  <input type="text" placeholder="Ender Id" (keyup)="filtId($event)">
 </div>
-{{data.id}}
-{{data.title}}
+<div class="sideMenu">
+  <div class="category">
+    <h4>Category</h4>
+    <img src="https://image.flaticon.com/icons/png/512/20/20972.png" alt="" (click)="filt = !filt">
+  </div>
+  <div class="categoryFilrer" *ngIf="filt">
+    <p>20 charaqterze naklebi</p>
+    <p>20 Id dan 30 Id mde</p>
+    <p>43 Id dan 55 Id mde</p>
+  </div>
+  <div class="color">
+    <h4>Color</h4>
+    <img src="https://image.flaticon.com/icons/png/512/20/20972.png" alt="">
+
+  </div>
+  <div class="price">
+    <h4>Price</h4>
+    <img src="https://image.flaticon.com/icons/png/512/20/20972.png" alt="">
+
+  </div>
+  <div class="filter">
+    <input type="text" name="" (keyup)="min($event)" placeholder="min">
+    <input type="text" name="" (keyup)="max($event)" placeholder="max">
+  </div>
+  <button type="button" name="button" (click)="minmaxfilt()">Filt!</button>
+</div>
 <router-outlet></router-outlet>
